--- a/css/main.css
+++ b/css/main.css
@@ -523,9 +523,6 @@ button {
    
 }
 
-.footer-connecting {
-    margin-right: 70px;
-}
 
 .footer-logo {
     display: block;
@@ -555,6 +552,11 @@ button {
 .footer-item:last-child {
     margin-bottom: 0;
 }
+
+.footer-icon-item:not(:last-child) {
+    margin-right: 10px;
+}
+
 
 .footer-map {
     color: var(--main-color);
@@ -595,6 +597,7 @@ button {
 }
 
 .footer-social {
+    margin-left: 70px;
     padding-top: 12px;
 }
 
@@ -602,11 +605,12 @@ button {
     display: flex;
     align-items: center;
     margin-top: 16px;
+    margin-right: 10px;
 }
 
 .footer-link {
     fill: var(--secondary-text-coor);
-    display: inline-flex;
+    display: flex;
     width: 44px;
     height: 44px;
     background-color: rgba(255, 255, 255, 0.1);
